--- a/locales/ja_JA/LC_MESSAGES/logs.po
+++ b/locales/ja_JA/LC_MESSAGES/logs.po
@@ -1953,7 +1953,7 @@ msgid "Log in to Splunk Observability Cloud."
 msgstr "Splunk Observability Cloud にログインします。"
 
 #: ../../logs/logs.rst:55
-msgid "In the left navigation menu, select :menuselection:`Data Management` to open the Integrate Your Data page."
+msgid "In the left navigation menu, select :menuselection:`Data Management` to open the :strong:`Integrate Your Data` page."
 msgstr "左のナビゲーションメニューで、:menuselection:`Data Management` を選択し、Integrate Your Data ページを開きます。"
 
 #: ../../logs/logs.rst:57
@@ -1981,7 +1981,7 @@ msgid "To send logs from Amazon Web Services to Log Observer, follow these instr
 msgstr "アマゾン ウェブ サービスからLog Observerにログを送信するには、以下の手順に従ってください："
 
 #: ../../logs/logs.rst:74
-msgid "In the left navigation menu, select :menuselection:`Data Management` to display the Integrate Your Data page."
+msgid "In the left navigation menu, select :menuselection:`Data Management` to display the :strong:`Integrate Your Data` page."
 msgstr "左のナビゲーションメニューで、:menuselection:`Data Management` を選択し、Integrate Your Data ページを表示します。"
 
 #: ../../logs/logs.rst:76
