--- a/locales/ja_JA/LC_MESSAGES/index.po
+++ b/locales/ja_JA/LC_MESSAGES/index.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Splunk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-23 17:21+0000\n"
-"PO-Revision-Date: 2024-03-05 17:46+0000\n"
+"PO-Revision-Date: 2024-04-18 10:45+0100\n"
 "Last-Translator: \n"
 "Language-Team: ja_JA <LL@li.org>\n"
 "Language: ja_JA\n"
@@ -417,49 +417,49 @@ msgstr ":icon-info:`.` :strong:`Splunk Observability Cloudへようこそ` Splun
 
 #: ../../index.rst:23
 msgid ":strong:`Service description` Benefits and service terms of Splunk Observability Cloud :ref:`o11y-service-description`"
-msgstr ":strong:`サービスの説明` Splunk Observability Cloud のメリットとサービス条件 :ref:`o11y-service-description`"
+msgstr ":strong:`サービスの説明` Splunk Observability Cloud のメリットとサービス条件 :ref:`o11y-service-description` "
 
 #: ../../index.rst:28
 #, fuzzy
 msgid ":strong:`Scenarios` Collection of scenarios for Splunk Observability Cloud :ref:`scenario-landing`"
-msgstr ":strong:`シナリオ` Splunk Observability Cloudのシナリオ集 :ref:`scenario-landing`"
+msgstr ":strong:`シナリオ` Splunk Observability Cloudのシナリオ集 :ref:`scenario-landing` "
 
 #: ../../index.rst:33
 #, fuzzy
 msgid ":strong:`Architecture` Architecture of Splunk Observability Cloud :ref:`architecture`"
-msgstr ":strong:`アーキテクチャ` Splunk Observability Cloudのアーキテクチャ :ref:`architecture`"
+msgstr ":strong:`アーキテクチャ` Splunk Observability Cloudのアーキテクチャ :ref:`architecture` "
 
 #: ../../index.rst:40
 msgid ""
 ":icon-cloud-upload:`.` :strong:`Get your data in` The first step toward observability is getting relevant data into Splunk Observability Cloud. View :ref:`all supported "
 "integrations <supported-data-sources>`."
 msgstr ""
-" :icon-cloud-upload:`.` :strong:`データの取り込み` オブザーバビリティの最初のステップは、関連データをSplunk Observability Cloudに取り込むことです。:ref:`サポート対象のイン"
-"テグレーションの全リスト<supported-data-sources>` を確認してください。"
+":icon-cloud-upload:`.` :strong:`データの取り込み` オブザーバビリティの最初のステップは、関連データをSplunk Observability Cloudに取り込むことです。:ref:`サポート対象のインテ"
+"グレーションの全リスト<supported-data-sources>` を確認してください。"
 
 #: ../../index.rst:45
 msgid ":strong:`Compatibility and requirements` Systems and languages you can use with Splunk Observability Cloud :ref:`requirements`"
-msgstr ":strong:`互換性と要件` Splunk Observability Cloudで使用可能なシステムおよび言語 :ref:`requirements`"
+msgstr ":strong:`互換性と要件` Splunk Observability Cloudで使用可能なシステムおよび言語 :ref:`requirements` "
 
 #: ../../index.rst:50
 msgid ":strong:`OpenTelemetry` Install the Splunk Distribution of the OpenTelemetry Collector :ref:`otel-intro`"
-msgstr ":strong:`OpenTelemetry` Splunk Distribution of OpenTelemetry Collectorのインストール :ref:`otel-intro`"
+msgstr ":strong:`OpenTelemetry` Splunk Distribution of OpenTelemetry Collectorのインストール :ref:`otel-intro` "
 
 #: ../../index.rst:55
 msgid ":strong:`Cloud providers` Integrate to collect service metrics and logs :ref:`get-started-connect`"
-msgstr ":strong:`クラウドプロバイダ` サービスメトリクスとログを収集するための統合 :ref:`get-started-connect`"
+msgstr ":strong:`クラウドプロバイダ` サービスメトリクスとログを収集するための統合 :ref:`get-started-connect` "
 
 #: ../../index.rst:60
 msgid ":strong:`Back-end apps and services` Instrument to collect traces and logs :ref:`get-started-application`"
-msgstr ":strong:`バックエンドアプリとサービス` トレースとログを収集するためのインストルメンテーション :ref:`get-started-application`"
+msgstr ":strong:`バックエンドアプリとサービス` トレースとログを収集するためのインストルメンテーション :ref:`get-started-application` "
 
 #: ../../index.rst:65
 msgid ":strong:`Front-end app user experiences` Instrument to collect user sessions :ref:`rum-gdi`"
-msgstr ":strong:`フロントエンドアプリのユーザーエクスペリエンス` ユーザーセッションを収集するためのインストルメンテーション :ref:`rum-gdi`"
+msgstr ":strong:`フロントエンドアプリのユーザーエクスペリエンス` ユーザーセッションを収集するためのインストルメンテーション :ref:`rum-gdi` "
 
 #: ../../index.rst:70
 msgid ":strong:`Serverless functions` Instrument to collect traces and logs :ref:`instrument-serverless-functions`"
-msgstr ":strong:`サーバーレス機能` トレースとログを収集するためのインストルメンテーション :ref:`instrument-serverless-functions`"
+msgstr ":strong:`サーバーレス機能` トレースとログを収集するためのインストルメンテーション :ref:`instrument-serverless-functions` "
 
 #: ../../index.rst:76
 msgid ":icon-display:`.` :strong:`Explore and monitor your environment` After you have data coming into Splunk Observability Cloud, you can do some exploring."
@@ -467,59 +467,58 @@ msgstr ":icon-display:`.` :strong:`ご利用の環境の探索と監視` Splunk 
 
 #: ../../index.rst:81
 msgid ":strong:`Infrastructure Monitoring` Monitor server and cluster metrics :ref:`wcidw-imm`"
-msgstr ":strong:`Infrastructure Monitoring` サーバーとクラスターのメトリクスの監視 :ref:`wcidw-imm`"
+msgstr ":strong:`Infrastructure Monitoring` サーバーとクラスターのメトリクスの監視 :ref:`wcidw-imm` "
 
 #: ../../index.rst:86
 msgid ":strong:`Application Performance Monitoring` Monitor back-end app and service traces :ref:`wcidw-apm`"
-msgstr ":strong:`Application Performance Monitoring` バックエンドアプリとサービストレースの監視 :ref:`wcidw-apm`"
+msgstr ":strong:`Application Performance Monitoring` バックエンドアプリとサービストレースの監視 :ref:`wcidw-apm` "
 
 #: ../../index.rst:91
 msgid ":strong:`Real User Monitoring` Monitor data about front-end app user experiences :ref:`wcidw-rum`"
-msgstr ":strong:`Real User Monitoring` フロントエンドアプリのユーザーエクスペリエンスに関するデータの監視 :ref:`wcidw-rum`"
+msgstr ":strong:`Real User Monitoring` フロントエンドアプリのユーザーエクスペリエンスに関するデータの監視 :ref:`wcidw-rum` "
 
 #: ../../index.rst:96
 msgid ":strong:`Log Observer Connect` Query logs to identify root causes :ref:`logs-intro-logconnect`"
-msgstr ":strong:`Log Observer Connect` 根本原因の特定のためのログのクエリ :ref:`logs-intro-logconnect`"
+msgstr ":strong:`Log Observer Connect` 根本原因の特定のためのログのクエリ :ref:`logs-intro-logconnect` "
 
 #: ../../index.rst:101
 msgid ":strong:`Synthetic Monitoring` Proactively monitor the performance of web resources :ref:`welcome-synthmon`"
-msgstr ":strong:`Synthetic Monitoring` ウェブリソースのパフォーマンスの積極的監視 :ref:`welcome-synthmon`"
+msgstr ":strong:`Synthetic Monitoring` ウェブリソースのパフォーマンスの積極的監視 :ref:`welcome-synthmon` "
 
 #: ../../index.rst:106
 msgid ":strong:`All products` Learn more about all Splunk Observability Cloud products :ref:`welcome`"
-msgstr ":strong:`すべての製品` すべてのSplunk Observability Cloud製品の詳細 :ref:`welcome`"
+msgstr ":strong:`すべての製品` すべてのSplunk Observability Cloud製品の詳細 :ref:`welcome` "
 
 #: ../../index.rst:112
 msgid ""
-":icon-wrench:`.` :strong:`Set up alerts and customize your account` Prepare for issues that might arise by setting up alerts, custom dashboards, and other advanced "
-"features."
+":icon-wrench:`.` :strong:`Set up alerts and customize your account`Prepare for issues that might arise by setting up alerts, custom dashboards, and other advanced features."
 msgstr ""
-" :icon-wrench:`.` :strong:`アラートの設定とアカウントのカスタマイズ` アラート、カスタムダッシュボード、その他の高度な機能を設定することで、発生する可能性のある問題に備えま"
+":icon-wrench:`.` :strong:`アラートの設定とアカウントのカスタマイズ` アラート、カスタムダッシュボード、その他の高度な機能を設定することで、発生する可能性のある問題に備えま"
 "す。"
 
 #: ../../index.rst:117
 msgid ":strong:`Detectors and alerts` Receive alerts about conditions you care about :ref:`create-detectors`"
-msgstr ":strong:`ディテクターとアラート` 関心のある条件に関するアラートの受信 :ref:`create-detectors`"
+msgstr ":strong:`ディテクターとアラート` 関心のある条件に関するアラートの受信 :ref:`create-detectors` "
 
 #: ../../index.rst:122
 msgid ":strong:`Dashboards and charts` Get actionable insights about the systems you monitor :ref:`dashboards`"
-msgstr ":strong:`ダッシュボードとチャート` 監視対象のシステムに関する実用的なインサイトの取得 :ref:`dashboards`"
+msgstr ":strong:`ダッシュボードとチャート` 監視対象のシステムに関する実用的なインサイトの取得 :ref:`dashboards` "
 
 #: ../../index.rst:127
 msgid ":strong:`Span tags` Use span tags to add useful metadata to traces :ref:`apm-add-context-trace-span`"
-msgstr ":strong:`スパンタグ` スパンタグの使用によるトレースに有用なメタデータの追加 :ref:`apm-add-context-trace-span`"
+msgstr ":strong:`スパンタグ` スパンタグの使用によるトレースに有用なメタデータの追加 :ref:`apm-add-context-trace-span` "
 
 #: ../../index.rst:132
 msgid ":strong:`Logs pipeline` Add value to your raw logs by customizing your pipeline :ref:`logs-pipeline`"
-msgstr ":strong:`ログパイプライン` パイプラインのカスタマイズによる生ログへの価値追加 :ref:`logs-pipeline`"
+msgstr ":strong:`ログパイプライン` パイプラインのカスタマイズによる生ログへの価値追加 :ref:`logs-pipeline` "
 
 #: ../../index.rst:137
 msgid ":strong:`Related Content` Enable users to seamlessly move across product views :ref:`get-started-relatedcontent`"
-msgstr ":strong:`関連コンテンツ` ユーザーが製品ビューをシームレスに移動可能 :ref:`get-started-relatedcontent`"
+msgstr ":strong:`関連コンテンツ` ユーザーが製品ビューをシームレスに移動可能 :ref:`get-started-relatedcontent` "
 
 #: ../../index.rst:142
 msgid ":strong:`Global Data Links` Provide convenient access to relevant resources :ref:`link-metadata-to-content`"
-msgstr ":strong:`グローバルデータリンク` 関連リソースへの便利なアクセスを提供 :ref:`link-metadata-to-content`"
+msgstr ":strong:`グローバルデータリンク` 関連リソースへの便利なアクセスを提供 :ref:`link-metadata-to-content` "
 
 #: ../../index.rst:148
 msgid ""
@@ -528,82 +527,82 @@ msgstr ":icon-cogs:`.` :strong:`アカウントの管理` Splunk Observability C
 
 #: ../../index.rst:153
 msgid ":strong:`Get started` Learn how to set up and administer your organization :ref:`admin-admin`"
-msgstr ":strong:`はじめに` 組織のセットアップおよび管理の方法の確認 :ref:`admin-admin`"
+msgstr ":strong:`はじめに` 組織のセットアップおよび管理の方法の確認 :ref:`admin-admin` "
 
 #: ../../index.rst:158
 msgid ":strong:`Access tokens` Authenticate and track API use :ref:`admin-org-tokens`"
-msgstr ":strong:`アクセストークン` API利用の認証と追跡 :ref:`admin-org-tokens`"
+msgstr ":strong:`アクセストークン` API利用の認証と追跡 :ref:`admin-org-tokens` "
 
 #: ../../index.rst:163
 msgid ":strong:`Users` Invite users and set access levels :ref:`admin-manage-users`"
-msgstr ":strong:`ユーザー` ユーザーの招待とアクセスレベルの設定 :ref:`admin-manage-users`"
+msgstr ":strong:`ユーザー` ユーザーの招待とアクセスレベルの設定 :ref:`admin-manage-users` "
 
 #: ../../index.rst:168
 msgid ":strong:`Teams` Create teams to help coordinate teamwork :ref:`admin-manage-teams`"
-msgstr ":strong:`チーム` チームワークを調整するためのチームの作成 :ref:`admin-manage-teams`"
+msgstr ":strong:`チーム` チームワークを調整するためのチームの作成 :ref:`admin-manage-teams` "
 
 #: ../../index.rst:173
 msgid ":strong:`Single sign-on` Set up an integration to an SSO provider :ref:`sso-label`"
-msgstr ":strong:`シングルサインオン` SSOプロバイダとの統合の設定 :ref:`sso-label`"
+msgstr ":strong:`シングルサインオン` SSOプロバイダとの統合の設定 :ref:`sso-label` "
 
 #: ../../index.rst:178
 msgid ":strong:`Subscription usage` Monitor subscription usage for Infrastructure Monitoring :ref:`subscription-overview`"
-msgstr ":strong:`サブスクリプション使用状況` Infrastructure Monitoringのサブスクリプション使用状況の監視 :ref:`subscription-overview`"
+msgstr ":strong:`サブスクリプション使用状況` Infrastructure Monitoringのサブスクリプション使用状況の監視 :ref:`subscription-overview` "
 
 #: ../../index.rst:184
 msgid ":icon-cloud-upload:`.` :strong:`Popular integrations` Access documentation for some of the most popular integrations used to get data into Splunk Observability Cloud."
 msgstr ""
-" :icon-cloud-upload:`.` :strong:`人気のインテグレーション` Splunk Observability Cloudへのデータ取り込みに使用される最も人気の高いインテグレーションのドキュメントへのアクセ"
+":icon-cloud-upload:`.` :strong:`人気のインテグレーション` Splunk Observability Cloudへのデータ取り込みに使用される最も人気の高いインテグレーションのドキュメントへのアクセ"
 "ス"
 
 #: ../../index.rst:189
 msgid ":strong:`Linux` Collect metrics and logs :ref:`get-started-linux`"
-msgstr ":strong:`Linux` メトリクスとログの収集 :ref:`get-started-linux`"
+msgstr ":strong:`Linux` メトリクスとログの収集 :ref:`get-started-linux` "
 
 #: ../../index.rst:194
 msgid ":strong:`Kubernetes` Collect metrics and logs :ref:`get-started-k8s`"
-msgstr ":strong:`Kubernetes` メトリクスとログの収集 :ref:`get-started-k8s`"
+msgstr ":strong:`Kubernetes` メトリクスとログの収集 :ref:`get-started-k8s` "
 
 #: ../../index.rst:199
 msgid ":strong:`Windows` Collect metrics and logs :ref:`get-started-windows`"
-msgstr ":strong:`Windows` メトリクスとログの収集 :ref:`get-started-windows`"
+msgstr ":strong:`Windows` メトリクスとログの収集 :ref:`get-started-windows` "
 
 #: ../../index.rst:204
 msgid ":strong:`Amazon Web Services` Collect metrics and logs :ref:`get-started-aws`"
-msgstr ":strong:`Amazon Web Services` メトリクスとログの収集 :ref:`get-started-aws`"
+msgstr ":strong:`Amazon Web Services` メトリクスとログの収集 :ref:`get-started-aws` "
 
 #: ../../index.rst:209
 msgid ":strong:`Azure` Collect metrics :ref:`get-started-azure`"
-msgstr ":strong:`Azure` メトリクスの収集 :ref:`get-started-azure`"
+msgstr ":strong:`Azure` メトリクスの収集 :ref:`get-started-azure` "
 
 #: ../../index.rst:214
 msgid ":strong:`Browser` Collect user sessions :ref:`browser-rum-gdi`"
-msgstr ":strong:`ブラウザ` ユーザーセッションの収集 :ref:`browser-rum-gdi`"
+msgstr ":strong:`ブラウザ` ユーザーセッションの収集 :ref:`browser-rum-gdi` "
 
 #: ../../index.rst:219
 #, fuzzy
 msgid ":strong:`.NET` Collect traces :ref:`get-started-dotnet-otel`"
-msgstr ":strong:`.NET` トレースの収集 :ref:`get-started-dotnet-otel`"
+msgstr ":strong:`.NET` トレースの収集 :ref:`get-started-dotnet-otel` "
 
 #: ../../index.rst:224
 msgid ":strong:`Java` Collect traces :ref:`get-started-java`"
-msgstr ":strong:`Java` トレースの収集 :ref:`get-started-java`"
+msgstr ":strong:`Java` トレースの収集 :ref:`get-started-java` "
 
 #: ../../index.rst:229
 msgid ":strong:`Ruby` Collect traces :ref:`get-started-ruby`"
-msgstr ":strong:`Ruby` トレースの収集 :ref:`get-started-ruby`"
+msgstr ":strong:`Ruby` トレースの収集 :ref:`get-started-ruby` "
 
 #: ../../index.rst:234
 msgid ":strong:`Node.js` Collect traces :ref:`get-started-nodejs`"
-msgstr ":strong:`Node.js` トレースの収集 :ref:`get-started-nodejs`"
+msgstr ":strong:`Node.js` トレースの収集 :ref:`get-started-nodejs` "
 
 #: ../../index.rst:239
 msgid ":strong:`PHP` Collect traces :ref:`get-started-php`"
-msgstr ":strong:`PHP` トレースの収集 :ref:`get-started-php`"
+msgstr ":strong:`PHP` トレースの収集 :ref:`get-started-php` "
 
 #: ../../index.rst:244
 msgid ":strong:`All supported integrations` View a list of all supported integrations :ref:`supported-data-sources`"
-msgstr ":strong:`サポート対象のインテグレーションの全リスト` サポート対象の全インテグレーションのリストの表示 :ref:`supported-data-sources`"
+msgstr ":strong:`サポート対象のインテグレーションの全リスト` サポート対象の全インテグレーションのリストの表示 :ref:`supported-data-sources` "
 
 #~ msgid "Measure and alert on your SLIs"
 #~ msgstr "SLIの測定と警告"
